# wechat-favorites-to-ima

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  setup.py
agents/: openai.yaml
scripts/: clean_wechat_links.py
wechat_favorites_to_ima/: __init__.py  cli.py  progress.py
